feat: env example updated

--- a/rideshare-backend/notification-service/.env.example
+++ b/rideshare-backend/notification-service/.env.example
@@ -1,2 +1,10 @@
-# DATABASE_URL="postgresql://username:password@localhost:5432/db?schema=public"
+# Database connection URL
+DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database>?sslmode=require"
 
+# SMTP configuration for email sending
+
+SMTP_USER="your-email@example.com"    # Replace with your email address
+SMTP_PASS="your-email-password"       # Replace with your email password
+
+# Telegram Bot Token
+TELEGRAM_BOT_TOKEN="your-telegram-bot-token"  # Replace with your Telegram bot token
