--- a/rideshare-backend/docker-compose.yml
+++ b/rideshare-backend/docker-compose.yml
@@ -1,11 +1,37 @@
 version: '3.8'
 
 services:
+  nginx:
+    build:
+        context: .
+    ports:
+      - "80:80"
+    depends_on:
+      - user-service
+      - analytics-and-reporting-service
+      - ride-service
+      - driver-service
+      - notification-service
+    networks:
+      - shared-network
+  notification-service:
+    build:
+      context: ./notification-service
+    ports:
+      - "5500:5500"
+    environment:
+      - NODE_ENV=production
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+    depends_on:
+      rabbitmq:
+        condition: service_started
+    networks:
+      - shared-network
   user-service:
     build:
       context: ./user-service
     ports:
-      - "3001:3000"
+      - "3001:3001"
     environment:
       - NODE_ENV=production
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
