--- a/rideshare-backend/docker-compose.yml
+++ b/rideshare-backend/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     environment:
       - NODE_ENV=production
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - MONGO_URI=mongodb://user-db:example@mongodb:27017/user-service
     depends_on:
       rabbitmq:
         condition: service_started
@@ -57,6 +58,8 @@ services:
   payment-service:
     build:
       context: ./payment-service
+    ports:
+      - "4000:4000"
     networks:
       - shared-network
    
@@ -124,7 +127,7 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_USERNAME: user-db
       MONGO_INITDB_ROOT_PASSWORD: example
     networks:
       - shared-network
