--- a/rideshare-backend/user-service/package.json
+++ b/rideshare-backend/user-service/package.json
@@ -7,7 +7,8 @@
         "dev": "nodemon src/app.js"
     },
     "dependencies": {
-        "amqplib": "^0.10.5",
+        "amqplib": "^0.10.3",
+        "@types/amqplib": "^0.10.1",
         "axios": "^1.7.9",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
