--- a/rideshare-backend/notification-service/package.json
+++ b/rideshare-backend/notification-service/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "start": "node dist/server.js",
+    "consumer": "node dist/notification_consumer.js",
     "build": "tsc",
     "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,7 +25,8 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
-    "axios": "^1.7.7",
+    "amqplib": "^0.10.5",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
     "body-parser": "^1.20.2",
@@ -40,7 +42,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "pg": "^8.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -50,6 +52,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.6",
     "@types/bcrypt": "^5.0.2",
     "@types/elliptic": "^6.4.18",
     "@types/fluent-ffmpeg": "^2.1.24",
